<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/btn_m2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/m2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_km2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/km2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_dm2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dm2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_cm2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/cm2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mm2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mm2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_a"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/a"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_ha"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ha"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_ft2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ft2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mi2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mi2"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mu"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/亩"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_qing"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/顷"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>