<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/btn_kg"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/kg"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_g"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/g"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_t"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/t"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mg"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mg"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_lb"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/lb"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_jin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/jin"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_liang"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/liang"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_ug"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ug"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>