<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/btn_m3"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/m3"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_cm3"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/cm3"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_dm3"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dm3"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_l"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/l"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mm3"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mm3"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_ml"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ml"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="18sp" />


</LinearLayout>